# Tecsys-backend

./: .dockerignore  .env  .env.example  .gitignore  1N4148W-TP.html  Dockerfile  NACE100M100V6.3X8TR13F.html  README.md  docker-compose.yml  docker-entrypoint.py  docker-entrypoint.sh  extractor.py  pyproject.toml
app/: main.py  manager.py  tasks.py  websocket.py
app/api/: router_global.py  routers.py
app/api/v1/: description.py  imports.py  manufacturer.py  ncm.py  order.py  pdf.py  product.py  routes.py  supplier.py  supplier_product.py  ws.py
app/core/: config.py  dependencies.py
app/db/: __init__.py  database.py
app/db/chroma_db/: __init__.py  chroma_functions.py  chromadb_manager.py  config.py  embedding.py  manager.py  model.py  query_process.py  tipi.py
app/log/: logger.py
app/model/: __init__.py  import.py  imports.py  manufacturer.py  order.py  product.py  supplier.py  supplier_product.py  supplyer.py  supplyer_product.py
app/pipeline/: flow_pipeline.py
app/repositories/: imports_repository.py  manufacturer_repository.py  order_repository.py  product_repository.py  repository_interface.py  supplier_product_repository.py  supplier_repository.py
app/schemas/: import.py  imports.py  manufacturer.py  order.py  product.py  supplier.py  supplier_product.py  supplyer.py  supplyer_product.py
app/scripts/: extract.py  extract_json.py  find_info.py  pdf2txt.py  setup.py  test_ncm.py  test_ncm_flow.py
app/services/: imports_service.py  manufacturer_service.py  ncm_service.py  order_service.py  product_service.py  supplier_product_service.py  supplier_service.py  tipi_service.py
app/util/: __init__.py  analysis_terms.py  logger_info.py  ncm.py  table_ncm.py  text_processing.py
migrations/: env.py
migrations/versions/: 07d94313683a_initial_tables.py  0932db7503e2_generate_new_database_version.py  09ae03044459_create_initial_tables.py  33c44889bd20_fix_product_primary_key.py  452ec5fb764a_create_initial_tables.py  506bd180ef99_initial_migration.py  5a4bc7907d1d_fix_supplyer_produt_model_add_erp_column.py  92c6fb10302c_fix_supplyer_name.py  989cf7d1c21c_create_all_tables.py  cbae7544cefc_reset_14_10.py  d584950aea35_create_all_tables.py  dd7278e49b73_generate_new_database_version.py  df5f1e2a9ae1_create_database.py  e3517f109bae_generate_new_database_version.py  f2a0df2cacf3_fix_supplyer_name.py
tests/: conftest.py  test_extract_info.py  test_final_desc.py  test_generate_desc.py  test_ncm.py  test_tipi.py
tests/crud/: test_imports_crud.py  test_manufacturer_crud.py  test_order_crud.py  test_product_crud.py  test_supplier_crud.py  test_supplier_product_crud.py
tests/others/: extract_info.py  generate_desc.py  tipi.py
(+34 files in other folders)
