[tool.poetry]
name = "tecsys-backend"
version = "0.1.0"
description = "API para classificação NCM de componentes eletrônicos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "chromadb (>=1.0.21,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[[tool.poetry.packages]]
include = "app"
from = "."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"