[tool.poetry]
name = "tecsys-backend"
version = "0.1.0"
description = "API para classificação NCM de componentes eletrônicos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.11.7,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
alembic = ">=1.16.5,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
greenlet = ">=3.2.4,<4.0.0"
pandas = ">=2.3.2,<3.0.0"
requests = ">=2.32.5,<3.0.0"
ollama = ">=0.5.3,<0.6.0"
chromadb = ">=1.0.21,<2.0.0"
openpyxl = ">=3.1.5,<4.0.0"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.20"
playwright = "^1.55.0"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
psycopg2-binary = "^2.9.11"
aiohttp = "^3.13.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]